--- a/src/Makefile
+++ b/src/Makefile
@@ -4,10 +4,10 @@ CFLAGS=-I$(IDIR)
 
 ODIR=../obj
 
-_DEPS = semutil.h shmutil.h pclock.h proc_table.h pcb.h
+_DEPS = semutil.h shmutil.h pclock.h proc_table.h pcb.h util.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
-_OBJ = oss.o shmutil.o semutil.o pclock.o proc_table.o pcb.o
+_OBJ = oss.o shmutil.o semutil.o pclock.o proc_table.o pcb.o util.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 _USER = user.o shmutil.o semutil.o pclock.o proc_table.o pcb.o
